[package]
name = "cborg"
version = "0.1.0"
authors = ["Travers Biddle <traversbiddle@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]

[profile.release] # Default options commented out
# opt-level = 3
# debug = false
# rpath = false
lto = true
# debug-assertions = false
# codegen-units = 16
# panic = 'unwind'
# incremental = false
overflow-checks = true