[package]
name = "cborg"
version = "0.3.0"
authors = ["Travers Biddle <traversbiddle@gmail.com>"]
license = "MIT"
description = "A CBOR parser"
repository = "https://gitlab.com/travbid/cborg"
edition = "2018"

[dependencies]

[profile.release] # Default options commented out
# opt-level = 3
# debug = false
# rpath = false
lto = true
# debug-assertions = false
# codegen-units = 16
# panic = 'unwind'
# incremental = false
overflow-checks = true